--- a/groupware/WebContent/css/layout.css
+++ b/groupware/WebContent/css/layout.css
@@ -43,7 +43,9 @@
 /* 		} */
 
 
-/*수업듣고 header section footer 다 나눠줘야 한다.*/
+
+
+/*레이아웃 재구성*/
 	/*레이아웃 구분선 완성 후 지우기*/
 		main, aside, section, article, header, footer{
 			border:1px dotted black;
@@ -56,7 +58,7 @@
 		}
 		
 		main {
-			width:100%;
+			width:1300px;
 /* 			width:1200px; */
 			margin:auto;
 		}
@@ -74,7 +76,7 @@
 		}
 		
 		aside a{
-		 color:rgb(52, 152, 219);
+		 color:black;
 		 text-decoration: none;
 		}
 		
@@ -90,10 +92,10 @@
 			min-height: 0;
 		}
 		article {
-			min-height:500px;
+			min-height:490px;
 		}
 		footer {
-			
+			min-height:10px;
 		}
 		
 		.company-logo{
@@ -121,7 +123,7 @@
 			padding:15px;
 		}
 		
-		.float-container a {
+		.nav a {
 			margin-left:3rem;
 			padding-top:0.2rem;
 			padding-bottom:0.2rem;
