--- a/groupware/WebContent/css/common.css
+++ b/groupware/WebContent/css/common.css
@@ -304,13 +304,15 @@ textarea.form-input {
 	min-width:35px;
 	
 	border:1px solid transparent;
+	border-radius:50%;
 	padding:0.5rem;
 	text-align: center;
 }
 .pagination > a:hover,
 .pagination > a.on {
 	border:1px solid lightgray;
-	color:rgb(255,85,146);
+	background-color:#3498DB;
+	color:white;
 }
 
 .pagination-list {
