급여 페이지 디자인 및 css 취소 버튼 스타일 추가

--- a/groupware/WebContent/css/common.css
+++ b/groupware/WebContent/css/common.css
@@ -295,6 +295,17 @@ textarea.form-input {
 	color:#3498DB;
 }
 
+.form-btn.btn-cancle{
+	width:auto;
+	background-color:gray !important;
+	border-color:gray !important;
+}
+.form-btn.btn-cancle:hover {
+	background-color:lightgray !important;
+	color:gray !important;
+	border-color:white;
+}
+
 /*
 	Pagination 스타일 (파란색 동그라미)
 */
