급여 페이지 테이블 정렬 수정

--- a/groupware/WebContent/css/common.css
+++ b/groupware/WebContent/css/common.css
@@ -172,6 +172,7 @@
 */
 .table {
 	width:100%;
+	border-radius:15px !important;
 }
 .table > thead > tr > th, 
 .table > thead > tr > td,
@@ -184,7 +185,7 @@
 
 .table.table-border {
 	border: 1px solid lightgray;
-	border-collapse: collapse; 
+	border-collapse: collapse;
 }
 .table.table-border > thead > tr > th, 
 .table.table-border > thead > tr > td,
