--- a/groupware/WebContent/css/common.css
+++ b/groupware/WebContent/css/common.css
@@ -83,7 +83,7 @@
 .container-1100, .container-1200, .container-1300, .container-1400, .container-1500 {
 	margin-left:auto;
 	margin-right:auto;
-	border:1px dotted gray;
+	/*border:1px dotted gray;*/
 }
 .container-left {
 	margin-left:0px;
@@ -102,7 +102,7 @@
 	영역 내부에 줄을 배치하여 원하는 도구들을 위치시키도록 구현
 */
 .row {
-	border:1px dotted gray;
+	/*border:1px dotted gray;*/
 	width:100%;
 	margin-top: 10px;
 	margin-bottom: 10px;
